# pgmon

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  config.pgmon.sample.yaml  config.pgmon.yaml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: DataTable.tsx  ui.tsx
src/: app.rs  config.rs  db.rs  forecasting.rs  history_tests.rs  lib.rs  main.rs  metrics.rs  persistence.rs  recommendations.rs  state.rs
src/http/: mod.rs
src/poller/: aggregation.rs  hot_path.rs  hourly.rs  mod.rs  storage.rs  util.rs  workload.rs
tests/: alert_events.rs  history_downsampling.rs  metric_aggregation.rs  workload_summary.rs
